--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,144 +1,144 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://majidh1.github.io/JalaliDatePicker/assets/demo.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
-    <script type="text/javascript"
-        src="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.js"></script>
-</head>
+<%-include("./const/head")%>
 
-<body class="bg-white">
-    <div id="first-phone-auth" class="relative top-20 mx-auto rounded-md bg-white max-w-md border border-gray-300 shadow">
-        <div class="mt-4 sm:mx-auto sm:w-full sm:max-w-md">
-            <div class="bg-white py-4 px-4 sm:rounded-lg sm:px-10 text-center">
-                <span class="text-2xl block font-bold text-center"> ورود </span>
-                <br>
-                <span class="mt-12">برای ادامه شماره موبایل یا ایمیل خود را وارد کنید.</span>
-                <form class="mb-2">
-                    <div class="mb-8">
-                        <label for="email"
-                            class="block text-right text-sm font-medium leading-5 mt-8 mb-2 text-gray-700">
-                            شماره همراه یا ایمیل
-                        </label>
-                        <input id="email" name="text" placeholder="09xxxxxxxxxx" type="email" required="" value=""
-                            class="appearance-none block w-full text-left p-6 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 focus:shadow-md">
-                        <!-- <label for="email"
-                            class="block text-right text-sm font-medium leading-5 mt-8 mb-2 text-gray-700">
-                            پسورد
-                        </label>
-                        <input id="email" name="email" placeholder="xxxxxxxxxxx" type="email" required="" value=""
-                            class="appearance-none block w-full text-right p-6 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 focus:shadow-md transition duration-150 ease-in-out sm:text-sm sm:leading-5"> -->
+    <body class="bg-white">
 
-                        <!-- Form Group -->
-                        <label class="font-medium text-right block mb-1 mt-6 text-gray-700" for="password">
-                            پسورد
-                        </label>
-                        <div dir="rtl" class="relative w-full">
-                         
-                            <div class="absolute inset-y-0 right-0 flex items-center px-2">
-                                <input class="hidden js-password-toggle" id="toggle" type="checkbox" />
-                                <label
-                                    class="bg-gray-300 hover:bg-gray-400 rounded px-2 py-1 text-sm text-gray-600 font-mono cursor-pointer js-password-label"
-                                    for="toggle"><i class="ri-eye-off-line"></i></label>
+
+        <div id="first-auth" class="flex items-center justify-center py-10 px-12">
+            <div class="mx-auto w-full max-w-[500px] bg-white border rounded-lg border-gray-300 shadow py-2 px-10">
+                <span class="text-2xl block font-bold mt-8 text-center">ورود</span>
+                <p style="text-align: center;" class="mt-2 mb-2 text-center">برای ادامه شماره همراه یا ایمیل خود را وارد کنید.</p>
+                <form action="javascript:void(0);">
+                    <div class="mb-5 pt-3">
+                        <div class="mx-3 flex flex-wrap flex-col">
+                            <div class="mb-5">
+                                <label class="font-medium text-right block mb-2 mt-2 text-gray-700" for="password">
+                                     ایمیل یا شماره همراه
+                                </label>
+                                <input type="text" name="email-phone" id="email-phone" placeholder="ایمیل یا شماره همراه"
+                                    class="w-full rounded-md border border-[#e0e0e0] mb-2 bg-white p-6 text-base font-medium text-[#6B7280] focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 focus:shadow-md" />
+                                <span class="text-red-500" id="email-phone-error"></span>
+
                             </div>
-                            <input
-                            class="appearance-none block w-full text-left p-6 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 focus:shadow-md transition duration-150 ease-in-out sm:text-sm sm:leading-5 font-mono js-password"
-                            id="password" type="password" autocomplete="off" />
 
+                            <div class="mb-5">
+                                <label class="font-medium text-right block mb-2 mt-2 text-gray-700" for="password">
+                                    پسورد
+                                </label>
+                                <div dir="rtl" class="relative w-full">
+
+                                    <div class="absolute inset-y-0 right-0 flex items-center px-2">
+                                        <input class="hidden js-password-toggle-1" id="toggle" type="checkbox" />
+                                        <label
+                                            class="bg-gray-300 hover:bg-gray-400 rounded px-2 py-1 text-sm text-gray-600 font-mono cursor-pointer js-password-label-1"
+                                            for="toggle"><i class="ri-eye-off-line"></i></label>
+                                    </div>
+                                    <input
+                                        class="appearance-none block w-full text-left p-6 mb-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-yellow focus:border-yellow-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5 font-mono js-password-1"
+                                        id="password" name="password" type="password" autocomplete="off" />
+                                </div>
+                                <span class="text-red-500" id="password-error"></span>
+
+                            </div>
                         </div>
 
-                        <!-- End Form Group -->
-                    </div>
+                        <div class="text-warning mt-4 text-center mb-4">
+                            <i class="ri-error-warning-line text-xl"></i>
+                            استفاده از سفیر به معنی پذیرش قوانین و مقررات این سرویس است.
+                        </div>
 
-
-                    <div class="text-warning">
-                        <i class="ri-error-warning-line text-xl"></i>
-                        استفاده از سفیر به معنی پذیرش قوانین و مقررات این سرویس است.
-                    </div>
-
-                    <div class="mt-8 mb-6">
-                        <span class="block w-full rounded-md shadow-sm">
-                            <button type="submit"
-                                class="w-full flex font-bold justify-center p-3 border border-transparent text-white font-medium rounded-md text-black bg-blue-600 hover:bg-blue-800 focus:outline-none focus:border-indigo-700 transition duration-150 ease-in-out">
-                                ورود
-                            </button>
-                        </span>
-                    </div>
-                    حساب ندارید؟ <a class="hover:text-blue-500" href="/register">ثبت نام</a>
+                        <div class="mt-10 mb-6">
+                            <span class="block w-full rounded-md shadow-sm font-bold">
+                                <button id="login-btn" type="button"
+                                    class="w-full flex font-bold justify-center p-3 border border-transparent text-white font-medium rounded-md text-black bg-blue-600 hover:bg-blue-800 focus:outline-none focus:border-indigo-700 transition duration-150 ease-in-out">
+                                  ورود
+                                </button>
+                            </span>
+                        </div>
+                        <p>
+                            حساب ندارید؟ <a class="hover:text-blue-500" href="/register">ثبت نام</a>
+                        </p>
                 </form>
             </div>
         </div>
-    </div>
-    <div style="display: none;" id="second-phone-auth"
-        class="max-w-md p-6 mx-auto max-w-sm flex h-dvh items-center justify-center">
-        <form class="p-10 border border-gray-300 rounded">
-            <p class="text-right text-2xl font-bold p-2">
-                کد تایید را وارد کنید
-            </p>
-            <p class="text-right text-gray-700 mt-4 p-2">
-                کد تایید برای شماره ۰۹۳۸۳۹۰۱۱۴۶ پیامک شد
-            </p>
-            <div class="flex justify-between gap-2 mb-4 mt-6">
-                <input
-                    class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                    type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code" required>
-                <input
-                    class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                    type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code" required>
-                <input
-                    class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                    type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code" required>
-                <input
-                    class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                    type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code" required>
-                <input
-                    class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                    type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code" required>
-            </div>
-            <div class="mt-2 mb-6">
-                <a class="block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-2" href="#">
-                    ارسال مجدد کد
-                </a>
-            </div>
-            <div class="flex flex-col items-center justify-center">
-                <p class="mb-6">
-                    ۲۵ : ۰۲مانده تا دریافت مجدد کد
+
+
+        <div style="display: none;" id="second-auth"
+            class="max-w-md p-6 mx-auto max-w-sm flex h-dvh items-center justify-center">
+            <form class="p-10 border border-gray-300 rounded">
+                <p class="text-right text-2xl font-bold p-2">
+                    کد تایید را وارد کنید
                 </p>
-                <button
-                    class="bg-blue-500 w-full hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="button">
-                    تایید کد
-                </button>
+                <p class="text-right text-gray-700 mt-4 p-2">
+                    کد تایید برای شماره ۰۹۳۸۳۹۰۱۱۴۶ پیامک شد
+                </p>
+                <div class="flex justify-between gap-2 mb-4 mt-6">
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
+                        required>
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
+                        required>
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
+                        required>
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
+                        required>
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
+                        required>
+                </div>
+                <div class="mt-2 mb-6">
+                    <a class="block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-2" href="#">
+                        ارسال مجدد کد
+                    </a>
+                </div>
+                <div class="flex flex-col items-center justify-center">
+                    <p class="mb-6">
+                        ۲۵ : ۰۲مانده تا دریافت مجدد کد
+                    </p>
+                    <button
+                        class="bg-blue-500 w-full hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        type="button">
+                        تایید کد
+                    </button>
 
-            </div>
-        </form>
-    </div>
+                </div>
+            </form>
+        </div>
 
-    <script>
-        const passwordToggle = document.querySelector('.js-password-toggle')
+        <script>
+            const passwordToggle1 = document.querySelector('.js-password-toggle-1')
+            const passwordToggle2 = document.querySelector('.js-password-toggle-2')
 
-        passwordToggle.addEventListener('change', function () {
-            const password = document.querySelector('.js-password'),
-                passwordLabel = document.querySelector('.js-password-label')
+            const password1 = document.querySelector('.js-password-1'),
+                passwordLabel1 = document.querySelector('.js-password-label-1')
 
-            if (password.type === 'password') {
-                password.type = 'text'
-                passwordLabel.innerHTML = '<i class="ri-eye-off-line"></i>'
-            } else {
-                password.type = 'password'
-                passwordLabel.innerHTML = '<i class="ri-eye-line"></i>'
-            }
+            passwordToggle1.addEventListener('change', function () {
 
-            password.focus()
-        })
+                if (password1.type === 'password') {
+                    password1.type = 'text'
+                    passwordLabel1.innerHTML = '<i class="ri-eye-off-line"></i>'
+                } else {
+                    password1.type = 'password'
+                    passwordLabel1.innerHTML = '<i class="ri-eye-line"></i>'
+                }
 
-    </script>
-</body>
+                password1.focus()
+            })
+
+        </script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
+        <script src="../../javascripts/user/login.js"></script>
+    </body>
 
 </html>
