--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://majidh1.github.io/JalaliDatePicker/assets/demo.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/3304/3304749.png" type="image/x-icon">
+    
     <link rel="stylesheet" href="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <script type="text/javascript"
@@ -19,7 +20,7 @@
             <div class="flex lg:flex-1">
                 <a href="/خانه" class="-m-1.5 p-1.5">
                     <span class="sr-only"></span>
-                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+                    <img class="h-10 w-auto" src="https://cdn-icons-png.flaticon.com/128/3304/3304749.png"
                         alt="سفیر">
                 </a>
             </div>
