--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -6,6 +6,50 @@
     <body class="bg-white">
 
 
+        <div style="display: none;" id="second-auth" class="flex mt-12 items-center justify-center py-10 px-12">
+            <form
+                class="mx-auto w-full max-w-[400px] bg-white mt-10 border rounded-lg border-gray-300 shadow py-10 px-10">
+                <p class="text-right text-2xl font-bold p-2">
+                    کد تایید را وارد کنید
+                </p>
+                <p id="otp-message" class="text-right text-gray-700 mt-4 p-2">
+
+                </p>
+                <div class="flex justify-between gap-2 mb-4 mt-6">
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-5">
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-4">
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-3">
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-2">
+                    <input
+                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-yellow-500 focus:ring-yellow-500 outline-none"
+                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" required id="otp-1">
+                </div>
+                <div style="display: none;" id="send-again-link" class="mt-2 mb-2">
+                    <a class="block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-2" href="#">
+                        ارسال مجدد کد
+                    </a>
+                </div>
+                <div class="flex flex-col items-center justify-center">
+                    <p id="two-sec" class="mb-6 mt-6"></p>
+                    <button id="verify-otp-btn"
+                        class="bg-blue-500 w-full hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        type="button">
+                        تایید کد
+                    </button>
+
+                </div>
+            </form>
+        </div>
+
+
         <div id="first-auth" class="flex items-center justify-center py-10 px-12">
             <div class="mx-auto w-full max-w-[650px] bg-white border rounded-lg border-gray-300 shadow py-2 px-10">
                 <span class="text-2xl block font-bold mt-8 text-center"> ثبت نام </span>
@@ -122,56 +166,6 @@
             </div>
         </div>
 
-
-        <div style="display: none;" id="second-auth"
-            class="max-w-md p-6 mx-auto max-w-sm flex h-dvh items-center justify-center">
-            <form class="p-10 border border-gray-300 rounded">
-                <p class="text-right text-2xl font-bold p-2">
-                    کد تایید را وارد کنید
-                </p>
-                <p class="text-right text-gray-700 mt-4 p-2">
-                    کد تایید برای شماره ۰۹۳۸۳۹۰۱۱۴۶ پیامک شد
-                </p>
-                <div class="flex justify-between gap-2 mb-4 mt-6">
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
-                        required>
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
-                        required>
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
-                        required>
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
-                        required>
-                    <input
-                        class="w-12 h-12 text-center border rounded-md shadow-sm focus:border-blue-500 focus:ring-blue-500"
-                        type="text" maxlength="1" pattern="[0-9]" inputmode="numeric" autocomplete="one-time-code"
-                        required>
-                </div>
-                <div class="mt-2 mb-6">
-                    <a class="block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-2" href="#">
-                        ارسال مجدد کد
-                    </a>
-                </div>
-                <div class="flex flex-col items-center justify-center">
-                    <p class="mb-6">
-                        ۲۵ : ۰۲مانده تا دریافت مجدد کد
-                    </p>
-                    <button
-                        class="bg-blue-500 w-full hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        type="button">
-                        تایید کد
-                    </button>
-
-                </div>
-            </form>
-        </div>
 
         <script>
             const passwordToggle1 = document.querySelector('.js-password-toggle-1')
