--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -97,7 +97,7 @@
 
                             <div class="text-warning mt-4 text-center mb-4">
                                 <i class="ri-error-warning-line text-xl"></i>
-                                استفاده از سفیر به معنی پذیرش قوانین و مقررات این سرویس است.
+                                استفاده از سایت به معنی پذیرش قوانین و مقررات این سرویس است.
                             </div>
 
                             <div class="mt-4 mb-6">
