--- a/views/users/const/header.ejs
+++ b/views/users/const/header.ejs
@@ -8,9 +8,9 @@
         </div>
 
         <div class="hidden lg:flex lg:gap-x-12">
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">خانه</a>
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">درباره ما </a>
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">تماس با ما</a>
+            <a href="/" class="text-sm font-semibold leading-6 text-gray-900">خانه</a>
+            <a href="/about" class="text-sm font-semibold leading-6 text-gray-900">درباره ما </a>
+            <a href="/contact" class="text-sm font-semibold leading-6 text-gray-900">تماس با ما</a>
         </div>
         <div class="hidden lg:flex lg:flex-1 lg:justify-end">
             <!-- <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Log in <span
@@ -21,14 +21,14 @@
                 <i class="ri-user-line ml-2 text-xl"></i>
                 ورود یا ثبت نام
             </button> -->
-
+<!-- 
             <button class="rounded-md px-4 py-2 transition flex flex-row text-gray-700 items-center"
                 id="auth-user-button">
                 <i class="ri-user-line ml-2 text-xl"></i>
                 <a href="/login">
                     ورود یا ثبت نام
                 </a>
-            </button>
+            </button> -->
             <div class="px-4 py-2 flex flex-row text-gray-700 items-center">
                 <i class="ri-user-follow-line  ml-2 text-xl"></i>
                 <a href="/profile">
