fix header error

--- a/views/users/const/header.ejs
+++ b/views/users/const/header.ejs
@@ -12,7 +12,7 @@
             <a href="/about" class="text-sm font-semibold leading-6 text-gray-900">درباره ما </a>
             <a href="/contact" class="text-sm font-semibold leading-6 text-gray-900">تماس با ما</a>
         </div>
-        <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+        <div id="user-auth-msg" class="hidden lg:flex lg:flex-1 lg:justify-end">
             <!-- <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Log in <span
                     aria-hidden="true">&rarr;</span></a> -->
             <!-- <button class="rounded-md px-4 py-2 transition flex flex-row text-gray-700 items-center"
@@ -21,20 +21,6 @@
                 <i class="ri-user-line ml-2 text-xl"></i>
                 ورود یا ثبت نام
             </button> -->
-<!-- 
-            <button class="rounded-md px-4 py-2 transition flex flex-row text-gray-700 items-center"
-                id="auth-user-button">
-                <i class="ri-user-line ml-2 text-xl"></i>
-                <a href="/login">
-                    ورود یا ثبت نام
-                </a>
-            </button> -->
-            <div class="px-4 py-2 flex flex-row text-gray-700 items-center">
-                <i class="ri-user-follow-line  ml-2 text-xl"></i>
-                <a href="/profile">
-                    حساب کاربری
-                </a>
-            </div>
 
 
         </div>
