--- a/views/users/const/pagesHead.ejs
+++ b/views/users/const/pagesHead.ejs
@@ -9,5 +9,5 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <script type="text/javascript"
         src="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.js"></script>
-    <title><%=title%></title>
+    <title></title>
 </head>
